<resources>
    <string name="app_name">KeyTools</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KeyTools</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Настройки">Настройки</string>
    <string name="menu_home">Захват криптоключа</string>
    <string name="menu_gallery">Запись на Classic</string>
    <string name="menu_cloneuid">Запись UID</string>
    <string name="menu_sectorcopy">Копирование сектора</string>
    <string name="Эмуляция_Mifare_Classic">Эмуляция Mifare Classic</string>
    <string name="menu_database">База меток</string>
    <string name="keytools">KeyTools</string>
    <string name="ABCD1234">1234ABCD</string>
    <string name="Block_KEY">\nBlock %d %s \nKEY %d = %012X</string>
    <string name="OK">OK</string>
    <string name="UID_Найдено_ключей">\nUID %08X \nНайдено ключей - %d :</string>
    <string name="UID_записан">UID записан</string>
    <string name="UID_не_совпадает_Попробуйте_другую_заготовку">UID не совпадает! Попробуйте другую заготовку!</string>
    <string name="UID_оригинала_считан">UID оригинала считан</string>
    <string name="UID_считан">UID считан</string>
    <string name="Адаптер_недоступен">Доступные драйвера не найдены</string>
    <string name="Блок_записан">Блок записан</string>
    <string name="Восстановить_0_й_блок_ZERO">Восстановить 0-й блок ZERO</string>
    <string name="Восстановление_ZERO">Восстановление ZERO</string>
    <string name="Восстановление_блока_0_ZERO">Восстановление блока 0 ZERO</string>
    <string name="Дамп_записан_успешно">Дамп записан успешно</string>
    <string name="Дамп_сектора">Дамп сектора</string>
    <string name="Еще">Еще</string>
    <string name="Записать_UID">Записать UID</string>
    <string name="Записать_копию_на_Classic">Записать копию на Classic</string>
    <string name="Запись_UID">Запись UID</string>
    <string name="Запись_блока_0_невозможна_попробуйте_другую_метку">Запись блока 0 невозможна, попробуйте другую метку</string>
    <string name="Запись_заготовки">Запись заготовки</string>
    <string name="Запись_на_эту_метку_невозможна_Поменяйте_метку">Запись на эту метку невозможна! Поменяйте метку!</string>
    <string name="Запись_успешно_завершена_KEY">\nЗапись успешно завершена.\nKEY = %012X</string>
    <string name="Захват_данных">Захват данных</string>
    <string name="Захват_данных_от_считывателя">Захват данных от считывателя</string>
    <string name="Ключ_сектора_неизвестен_попробуйте_другую_метку">Ключ сектора неизвестен, попробуйте другую метку</string>
    <string name="Ключи_не_найдены_Попробуйте_увеличить_число_захватов">Ключи не найдены! Попробуйте увеличить число захватов!</string>
    <string name="Код">Код</string>
    <string name="Криптоключи_сброшены">Криптоключи сброшены</string>
    <string name="Метка_восстановлена">Метка восстановлена</string>
    <string name="Метка_не_ZERO_Сброс_ключей_невозможен">Метка не ZERO! Сброс ключей невозможен!</string>
    <string name="Метка_не_требует_восстановления">Метка не требует восстановления</string>
    <string name="Метка_стерта">\nМетка стерта</string>
    <string name="Найденные_ключи_не_подходят_к_этой_метке">Найденные ключи не подходят к этой метке</string>
    <string name="Обнаружен_ФИЛЬТР_ОТР">\nОбнаружен ФИЛЬТР ОТР !</string>
    <string name="Операция_прервана">Операция прервана</string>
    <string name="Отмена">Отмена</string>
    <string name="Ошибка_адаптера_Операция_прервана">Ошибка адаптера! Операция прервана</string>
    <string name="Ошибка_аутентификации">Ошибка аутентификации!</string>
    <string name="Ошибка_ввода">Ошибка ввода !</string>
    <string name="Ошибка_ввода_UID">Ошибка ввода UID !</string>
    <string name="Ошибка_ввода_Число_захватов_меньше_2">Ошибка ввода ! Число захватов меньше 2 !</string>
    <string name="Ошибка_записи">Ошибка записи</string>
    <string name="Ошибка_записи_блока">Ошибка записи блока</string>
    <string name="Ошибка_записи_сектора_0">Ошибка записи сектора 0</string>
    <string name="Ошибка_чтения">Ошибка чтения</string>
    <string name="Ошибка_чтения_UID">Ошибка чтения UID</string>
    <string name="Ошибка_чтения_блока">Ошибка чтения блока</string>
    <string name="попытка">попытка</string>
    <string name="Пауза">Пауза (мс)</string>
    <string name="Поднесите_заготовку_Classic_к_устройству">Поднесите заготовку Classic к устройству</string>
    <string name="Поднесите_заготовку_Mifare_Classic_к_устройству">Поднесите заготовку Mifare Classic к устройству</string>
    <string name="Поднесите_заготовку_ZERO_к_устройству">Поднесите заготовку ZERO к устройству</string>
    <string name="Поднесите_метку">Поднесите метку</string>
    <string name="Поднесите_метку_ZERO_к_устройству">Поднесите метку ZERO к устройству</string>
    <string name="Поднесите_оригинал_метки_к_устройству">Поднесите оригинал метки к устройству</string>
    <string name="Поднесите_устройство_к_считывателю">Поднесите устройство к считывателю</string>
    <string name="Поднесите_устройство_к_считывателю_1_я_попытка">Поднесите устройство \nк считывателю \n1 - я попытка</string>
    <string name="Подождите">Подождите …</string>
    <string name="Подождите_идет_захват">Подождите - \nидет захват!\n</string>
    <string name="Проверка">Проверка</string>
    <string name="Проверьте_записанную_метку">Проверьте записанную метку</string>
    <string name="Рассчет_окончен">Рассчет окончен</string>
    <string name="Расчет_ключей">Расчет ключей</string>
    <string name="Результат_расчета_криптоключей">\nРезультат расчета криптоключей :</string>
    <string name="Сброс_криптоключей_ZERO">Сброс криптоключей ZERO</string>
    <string name="Сбросить_криптоключи">Сбросить криптоключи</string>
    <string name="Следующий">Следующий</string>
    <string name="Сохранить">Сохранить</string>
    <string name="Стереть">Стереть</string>
    <string name="Считать_с_Метки">Считать с Метки</string>
    <string name="Считать_с_оригинала">Считать с оригинала</string>
    <string name="Считывание_UID">Считывание UID</string>
    <string name="Число_захватов">Число захватов</string>
    <string name="Чтение_метки">Чтение метки</string>
    <string name="Открыть_файл">Открыть файл</string>
    <string name="Загрузить">Загрузить</string>
    <string name="Прочитать">Прочитать</string>
    <string name="Старт_эмулятора">Старт эмулятора</string>
    <string name="title_activity_show_base">ShowBaseActivity</string>
</resources>