<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_keygrab"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_writeclassic"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_cloneuid"
            android:title="@string/menu_cloneuid" />
        <item
            android:id="@+id/nav_sectorcopy"
            android:title="@string/menu_sectorcopy" />
        <item
            android:id="@+id/nav_emulator"
            android:title="@string/Эмуляция_Mifare_Classic" />
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->

<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
